--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //Bmob
     implementation 'cn.bmob.android:bmob-sdk:3.5.0'
+    //圆形头像图库CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
