WebView网页详情处理|进度条处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
         <!--归属地查询-->
         <activity android:name=".ui.PhoneActivity"
             android:label="归属地查询"/>
+        <!--新闻Web详情-->
+        <activity android:name=".ui.WebViewActivity"/>
     </application>
 
 </manifest>
