女孩图片---数据解析与图片加载

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     implementation ('com.kymjs.rxvolley:rxvolley:1.1.4'){
         exclude group: "io.reactivex"
     }//过滤掉io.reavtivex
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 }
