--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,15 @@ android {
     }
 }
 
+//添加本地仓库
+repositories {
+    flatDir{
+        dirs 'libs'
+    }
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -39,15 +46,18 @@ dependencies {
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //Bmob
-    implementation ('cn.bmob.android:bmob-sdk:3.5.0'){
+    implementation('cn.bmob.android:bmob-sdk:3.5.0') {
         exclude group: "io.reactivex"
-    }//过滤掉io.reavtivex
+    }
+    //过滤掉io.reavtivex
     //圆形头像图库CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     //RxVolley
-    implementation ('com.kymjs.rxvolley:rxvolley:1.1.4'){
+    implementation('com.kymjs.rxvolley:rxvolley:1.1.4') {
         exclude group: "io.reactivex"
-    }//过滤掉io.reavtivex
+    }
+    //过滤掉io.reavtivex
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation files('libs/Msc.jar')
 }
