一部分的智能短信提醒

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
     <!--如需使用人脸识别，还要添加：摄相头权限，拍照需要用到 -->
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!--短信权限-->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+
 
     <application
         android:name=".application.BaseApplication"
@@ -83,6 +86,9 @@
             android:label="归属地查询"/>
         <!--新闻Web详情-->
         <activity android:name=".ui.WebViewActivity"/>
+        <!--智能短信提醒-->
+        <service android:name=".service.SmsService"/>
+
     </application>
 
 </manifest>
