--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation files('libs/Msc.jar')
+    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
