下载引入了ZXing扫一扫，生成二维码的lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation files('libs/Msc.jar')
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    //二维码
+    implementation project(path: ':libzxing')
 }
