百度地图————多图层的绘制

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     //二维码
     implementation project(path: ':libzxing')
+    //百度地图SDK
+    implementation files('libs/BaiduLBS_Android.jar')
+    implementation files('libs/IndoorscapeAlbumPlugin.jar')
 }
