添加了关于软件的界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
     <application
         android:name=".application.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -112,6 +112,9 @@
         <activity
             android:name=".ui.LocationActivity"
             android:label="我的位置" />
+        <!--关于软件-->
+        <activity android:name=".ui.AboutActivity"
+            android:label="关于软件"/>
 
         <!--百度地图、定位AK-->
         <meta-data
